# fungi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md
crates/config/: Cargo.toml
crates/config-migrate/: Cargo.toml
crates/config-migrate/src/: apply.rs  config_files.rs  detection.rs  lib.rs  local_preferences.rs  model.rs  services.rs  tests.rs
crates/config-migrate/tests/fixtures/: current-v2-config.toml  current-v3-config.toml  legacy-no-version-config.toml
crates/config/src/: address_book.rs  build_info.rs  devices.rs  direct_addresses.rs  docker.rs  file_transfer.rs  fra.rs  init.rs  known_peers.rs  lib.rs  libp2p.rs  local_access.rs  local_preferences.rs  paths.rs  recipe_cache.rs  rpc.rs  runtime.rs  service_cache.rs  tcp_tunneling.rs  trusted_devices.rs
crates/daemon/: Cargo.toml
crates/daemon-grpc/: Cargo.toml  build.rs
crates/daemon-grpc/proto/: fungi_daemon.proto
crates/daemon-grpc/src/: lib.rs
crates/daemon-uniffi-binding/: Cargo.toml
crates/daemon-uniffi-binding/src/: lib.rs
crates/daemon/scripts/: real-wasi-runtime-smoke.sh
crates/daemon/src/: api.rs  daemon.rs  lib.rs  node_capabilities.rs  recipes.rs  runtime.rs  service_control.rs  service_state.rs  test_support.rs
crates/daemon/src/api/: address_book.rs  devices.rs  file_transfer.rs  mod.rs  peer.rs  relay.rs  runtime.rs  service_access.rs  tcp_tunneling.rs  types.rs
crates/daemon/src/controls/: docker.rs  file_transfer_client.rs  file_transfer_service.rs  mdns.rs  mod.rs  node_capabilities.rs  service_control.rs  service_discovery.rs  stream_selection.rs
crates/daemon/src/controls/file_transfer/: file_transfer_client.rs  file_transfer_service.rs  ftp_impl.rs  mod.rs  webdav_impl.rs
crates/daemon/src/controls/tcp_tunneling/: mod.rs  port_forward.rs  port_listen.rs  tcp_tunneling_control.rs
crates/daemon/src/listeners/: daemon_rpc.rs  mod.rs
crates/daemon/src/listeners/file_transfer/: local_listener.rs  mod.rs  server_impl.rs
crates/daemon/src/listeners/fungi_remote_access/: local_listener.rs  peer_listener.rs
crates/daemon/src/runtime/: control.rs  helpers.rs  manifest.rs  mod.rs  model.rs  providers.rs  tests.rs
crates/daemon/tests/: allowlist_protocol_tests.rs  file_transfer.rs  probe_smoke_tests.rs  tcp_tunneling_tests.rs
crates/docker-agent/: Cargo.toml
crates/docker-agent/scripts/: real-docker-smoke.sh
crates/docker-agent/src/: agent.rs  client.rs  error.rs  lib.rs  policy.rs  spec.rs
crates/docker-agent/tests/: agent.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/lab/: Cargo.toml
crates/lab/src/: cli.rs  lib.rs  main.rs  process.rs  runtime.rs  state.rs  util.rs
crates/stream/: Cargo.toml  README.md
crates/stream/src/: behaviour.rs  control.rs  handler.rs  lib.rs  policy.rs  registry.rs  tests.rs  upgrade.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: connection_state.rs  lib.rs  libp2p.rs  peer_handshake.rs  ping.rs
crates/swarm/src/behaviours/: mod.rs  relay_refresh.rs
crates/swarm/src/behaviours/address_book/: behaviour.rs
crates/swarm/src/behaviours/ext/: behaviour.rs  mod.rs
crates/swarm/src/libp2p/: control.rs  dial_plan.rs  governance.rs  mod.rs  relay.rs  runtime.rs  tests.rs  types.rs
crates/swarm/src/state/: connectivity.rs  mod.rs  registry.rs
crates/tests/: Cargo.toml  README.md
crates/tests/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: keypair.rs  lib.rs  mobile_device_info.rs  protocols.rs
crates/util/src/ipc/: mod.rs
crates/util/src/tcp_tunneling/: port_forward.rs  port_listen.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: lib.rs  wasmtime_wasi_impl.rs
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: frb_generated.rs
flutter_app/rust/src/api/: fungi.rs  mod.rs  simple.rs
fungi/: Cargo.toml
fungi-config/: Cargo.toml
fungi-config/src/: init.rs  lib.rs  libp2p.rs  mushd.rs
fungi-daemon/: Cargo.toml
fungi-daemon-uniffi-binding/: Cargo.toml
fungi-daemon-uniffi-binding/src/: export.udl  lib.rs
fungi-daemon/listeners/: mush_listener.rs
fungi-daemon/src/: daemon.rs  lib.rs
fungi-daemon/src/listeners/: daemon_rpc.rs  mod.rs  mush_listener.rs  wasi_listener.rs
fungi-daemon/src/listeners/fungi_remote_access/: local_listener.rs  mod.rs  peer_listener.rs
fungi-gateway/: Cargo.toml
fungi-gateway/src/: lib.rs  libp2p.rs
fungi-gateway/src/address_book/: behaviour.rs
fungi-swarm/: Cargo.toml
fungi-swarm/src/: lib.rs  libp2p.rs
fungi-swarm/src/behaviours/: mod.rs
fungi-util/: Cargo.toml
fungi-util/src/: async_borrow.rs  async_result.rs  ipc.rs  lib.rs  protocols.rs
fungi-util/src/ipc/: mod.rs
fungi-util/src/ipc/messages/: main_to_daemon.rs
fungi-util/src/tcp_tunneling/: mod.rs  port_forward.rs  port_listen.rs
fungi-wasi/: Cargo.toml
fungi-wasi/src/: lib.rs  stdio_impl.rs  wasmtime_wasi_impl.rs
fungi-wasi/src/ext/: mod.rs  swarm_binding.rs
fungi-wasi/wit/: swarm.wit  world.wit
fungi/ffi/fungi-mobile-binding/: Cargo.toml  build.rs
fungi/ffi/fungi-mobile-binding/src/: export.udl  lib.rs
fungi/src/: lib.rs  logging.rs  main.rs
fungi/src/bins/: fungi-daemon.rs  fungi-wasi.rs  mush.rs
fungi/src/commands/: daemon.rs  fungi_control.rs  fungi_daemon.rs  fungi_init.rs  fungi_main.rs  fungi_migrate.rs  fungi_relay.rs  fungi_wasi.rs  init.rs  mod.rs  mush.rs  wasi.rs
fungi/src/commands/daemon/: daemon.rs  mod.rs
fungi/src/commands/fungi_control/: access.rs  allowed_peers.rs  catalog.rs  client.rs  connection.rs  device.rs  ft_client.rs  ft_service.rs  info.rs  mod.rs  peer.rs  ping.rs  relay_config.rs  remote.rs  security.rs  service.rs  shared.rs  trusted_devices.rs  tunnel.rs
fungi/src/config/: mod.rs  mushd.rs  tcp_tunneling.rs
fungi/tests/: cli_smoke.rs  commands.rs  migrate_cli.rs
server/fungi-server-simple-impl/: Cargo.toml
server/fungi-server-simple-impl/src/: lib.rs
server/fungi-server-simple-impl/src/auth_service/: service.rs
server/fungi-server-simple-impl/src/listener/: tcp.rs
webdav-wasip2/: Cargo.toml  README.md
webdav-wasip2/src/: backend.rs  lib.rs  main.rs  memory_backend.rs  server.rs  webdav.rs
(+122 files in other folders)
