[workspace]
resolver = "2"

members = [
    "fungi",
    "crates/config",
    "crates/daemon",
    "crates/swarm",
    "crates/util",
    "crates/fs",
    "flutter_app/rust",
]

[workspace.dependencies]
futures = "0.3"
log = "0.4"
once_cell = "1"
anyhow = "1"
bincode = "1.3"
rand = "0.8"
interprocess = { version = "2.2.3", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35", features = ["full"] }
thiserror = "2.0"
libp2p = { version = "0.55", features = [
    "macros",
    "noise",
    "mdns",
    "ping",
    "tcp",
    "quic",
    "tokio",
    "yamux",
    "serde",
    "identify",
    "relay",
    "dcutr",
    "rsa",
    "secp256k1",
    "ed25519",
] }
libp2p-stream = "0.3.0-alpha"
libp2p-identity = { version = "0.2", features = ["secp256k1"] }
libp2p-swarm = "0.46"
parking_lot = "0.12"

[patch.crates-io]
# workaround for fixing the build error on macOS
if-watch = { git = "https://github.com/Heap-Hop/if-watch.git", branch = "no_system_configuration_on_macos" }
