[workspace]
resolver = "2"

members = [
    "fungi",
    "crates/config",
    "crates/daemon",
    "crates/swarm",
    "crates/util",
    "crates/fs",
    "crates/wasi",
    "flutter_app/rust",
]

[workspace.package]
version = "0.3.4"
edition = "2024"

[workspace.dependencies]
futures = "0.3"
log = "0.4"
once_cell = "1"
anyhow = "1"
bincode = "1.3"
rand = "0.8"
interprocess = { version = "2.2.3", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35", features = ["full"] }
thiserror = "2.0"
libp2p = { version = "0.56", features = [
    "macros",
    "noise",
    "mdns",
    "ping",
    "tcp",
    "quic",
    "tokio",
    "yamux",
    "serde",
    "identify",
    "relay",
    "dcutr",
    "rsa",
    "secp256k1",
    "ed25519",
] }
libp2p-stream = "0.4.0-alpha"
libp2p-identity = { version = "0.2", features = ["secp256k1", "serde", "rand"] }
libp2p-swarm = "0.47"
parking_lot = "0.12"

[patch.crates-io]
# workaround for fixing the build error on macOS
if-watch = { git = "https://github.com/Heap-Hop/if-watch.git", branch = "no_system_configuration_on_macos" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0
