[workspace]
resolver = "2"

members = [
    "fungi",
    "crates/config",
    "crates/daemon",
    "crates/docker-agent",
    "crates/stream",
    "crates/swarm",
    "crates/util",
    "crates/fs",
    "crates/daemon-grpc",
    "crates/tests",
]

[workspace.package]
version = "0.6.1"
edition = "2024"

[workspace.dependencies]
async-result = "0.1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
once_cell = "1"
anyhow = "1"
bincode = "1.3"
bytes = "1"
cap-std = "3.4"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dav-server = { version = "0.8", default-features = false }
env_logger = "0.11"
flexi_logger = "0.31"
flume = "0.11.1"
home = "0.5"
http-body-util = "0.1"
hyper = "1.1.0"
hyper-util = "0.1.2"
interprocess = { version = "2.2.3", features = ["tokio"] }
libp2p-core = "0.43.1"
libp2p-swarm-test = "0.6.0"
libunftp = "0.21"
mdns-sd = "0.18"
multiaddr = "0.18"
percent-encoding = "2.3"
prost = "0.14"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = "0.35.2"
tarpc = { version = "0.35", features = ["full"] }
tempfile = "3.20.0"
thiserror = "2.0"
tokio = "1.38"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.9"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
typed-path = "0.11.0"
ulid = "1"
unftp-sbe-fs = "0.3.0"
void = "1"
wasmtime-cli = "44"
libp2p = { version = "0.56", features = [
    "macros",
    "noise",
    "mdns",
    "ping",
    "tcp",
    "quic",
    "tokio",
    "yamux",
    "serde",
    "identify",
    "relay",
    "dcutr",
    "rsa",
    "secp256k1",
    "ed25519",
] }
fungi-config = { path = "crates/config" }
fungi-daemon = { path = "crates/daemon" }
fungi-daemon-grpc = { path = "crates/daemon-grpc" }
fungi-docker-agent = { path = "crates/docker-agent" }
fungi-fs = { path = "crates/fs" }
fungi-stream = { path = "crates/stream" }
fungi-swarm = { path = "crates/swarm" }
fungi-util = { path = "crates/util" }
libp2p-identity = { version = "0.2", features = ["secp256k1", "serde", "rand"] }
libp2p-swarm = "0.47"
parking_lot = "0.12"

[patch.crates-io]
# workaround for fixing the build error on macOS
if-watch = { git = "https://github.com/Heap-Hop/if-watch.git", branch = "no_system_configuration_on_macos" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0
