[package]
name = "fungi-config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = "0.8"
libp2p-identity = { version = "0.2", features = ["secp256k1"]}
multiaddr = "0.18"
fungi-util = { path = "../fungi-util" }