[package]
name = "fungi-daemon-uniffi-binding"
version = "0.3.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "fungi_daemon_binding"

[dependencies]
fungi-config = { path = "../fungi-config" }
fungi-daemon = { path = "../fungi-daemon" }
uniffi = { version = "0.27" }
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
