[package]
name = "fungi-daemon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tcp-tunneling"]
tcp-tunneling = []
cli = ["clap"]

[dependencies]
fungi-config = { path = "../fungi-config" }
fungi-swarm = { path = "../fungi-swarm" }
fungi-util = { path = "../fungi-util" }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p = "0.53"
home = "0.5"
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
libp2p-stream = "0.1.0-alpha"
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = { workspace = true }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true