[package]
name = "fungi-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53" , features = ["noise", "ping", "tcp", "tokio", "yamux", "serde"] }
once_cell = "1"
fungi-util = { path = "../fungi-util" }