[package]
name = "fungi-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53" , features = ["macros", "noise", "ping", "tcp", "quic", "tokio", "yamux", "serde"] }
libp2p-stream = "0.1.0-alpha"
fungi-util = { path = "../fungi-util" }