[package]
name = "fungi-util"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tcp-tunneling"]
tcp-tunneling = []

[dependencies]
log = { workspace = true }
futures = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p-swarm = "0.44"
libp2p-stream = "0.1.0-alpha"
libp2p-identity = { version = "0.2", features = ["secp256k1"] }
interprocess = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { workspace = true }
anyhow = { workspace = true }
