[package]
name = "fungi-wasi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2.2", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
futures = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
wasmtime = "23"
wasmtime-wasi = "23"
rand = "0.8"
fungi-util = { path = "../fungi-util" }
async-trait = "0.1"
bytes = "1"