[package]
name = "fungi"
version.workspace = true
edition.workspace = true
default-run = "fungi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasi"]
wasi = ["dep:wasmtime-cli"]

[dependencies]
log = { workspace = true }
env_logger = "0.11"
flexi_logger = "0.31"
chrono = { version = "0.4", default-features = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
home = "0.5"
thiserror = { workspace = true }
tonic = "0.14"
fungi-config = { path = "../crates/config" }
fungi-daemon = { path = "../crates/daemon" }
fungi-daemon-grpc = { path = "../crates/daemon-grpc" }
fungi-swarm = { path = "../crates/swarm" }
fungi-util = { path = "../crates/util" }
# fungi-wasi = { path = "../crates/wasi" }
wasmtime-cli = { version = "37", optional = true }
libp2p = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }
libp2p-stream = { workspace = true }
