[package]
name = "fungi"
version.workspace = true
edition.workspace = true
default-run = "fungi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasi"]
wasi = ["dep:wasmtime-cli"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
flexi_logger = { workspace = true }
chrono = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
home = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
fungi-config = { workspace = true }
fungi-daemon = { workspace = true }
fungi-daemon-grpc = { workspace = true }
fungi-swarm = { workspace = true }
fungi-util = { workspace = true }
wasmtime-cli = { workspace = true, optional = true }
libp2p = { workspace = true }
multiaddr = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
