[package]
name = "fungi"
version.workspace = true
edition.workspace = true
default-run = "fungi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasi"]
wasi = []

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
flexi_logger = { workspace = true }
chrono = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
home = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
fungi-config = { workspace = true }
fungi-daemon = { workspace = true }
fungi-daemon-grpc = { workspace = true }
fungi-swarm = { workspace = true }
fungi-util = { workspace = true }
libp2p = { workspace = true }
multiaddr = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tarpc = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
wasmtime-cli-host = { package = "wasmtime-cli", version = "44.0.1" }

[target.'cfg(target_os = "android")'.dependencies]
# Temporary override until an official Wasmtime release includes #13118.
wasmtime-cli-android = { package = "wasmtime-cli", git = "https://github.com/Heap-Hop/wasmtime.git", tag = "v44.0.1-android-fix" }

[dev-dependencies]
tempfile = { workspace = true }
