[package]
name = "webdav-wasip2"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
async-trait = "0.1.88"
bytes = "1.10.1"
dav-server = { version = "0.11.0", default-features = false }
env_logger = "0.11.8"
futures = "0.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.15", features = ["tokio"] }
log = "0.4"
thiserror = "2"
tokio = { version = "1.46.1", features = ["rt", "macros", "net", "io-util", "time", "sync"] }

[patch.crates-io]
dav-server = { path = "vendor/dav-server" }
