[package]
name = "fungi-config-migrate"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
