[package]
name = "fungi-config"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = "0.8"
libp2p-identity = { workspace = true }
multiaddr = "0.18"
fungi-util = { path = "../util" }
anyhow = { workspace = true }
mdns-sd = { git = "https://github.com/keepsimple1/mdns-sd", rev = "1b194de004e7290eff8c116f3e0cb88fadf2f03e" }

[dev-dependencies]
tempfile = "3.20.0"
