[package]
name = "fungi-config"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = "0.8"
libp2p-identity = { workspace = true }
multiaddr = "0.18"
fungi-util = { path = "../util" }
anyhow = { workspace = true }
log = { workspace = true }
mdns-sd = "0.18"

[dev-dependencies]
tempfile = "3.20.0"
