[package]
name = "fungi-config"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
libp2p-identity = { workspace = true }
multiaddr = { workspace = true }
fungi-util = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
mdns-sd = { workspace = true }
fungi-config-migrate = { workspace = true }
ulid = { workspace = true }
tempfile = { workspace = true }
