[package]
name = "fungi-daemon-grpc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
fungi-daemon = { path = "../daemon" }
fungi-config = { path = "../config" }
fungi-swarm = { path = "../swarm" }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14"
serde_json = "1"
libp2p-identity = { workspace = true }
libp2p-swarm = { workspace = true }
multiaddr = "0.18"
tokio = { version = "1", features = ["time", "sync", "rt"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.2"
