[package]
name = "fungi-daemon-grpc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
fungi-daemon = { workspace = true }
fungi-config = { workspace = true }
fungi-swarm = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-swarm = { workspace = true }
multiaddr = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
