[package]
name = "fungi-daemon-uniffi-binding"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "fungi_daemon_binding"

[dependencies]
fungi-config = { path = "../config" }
fungi-daemon = { path = "../daemon" }
uniffi = { version = "0.29" }
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
log = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
