[package]
name = "fungi-daemon"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
fungi-config = { path = "../config" }
fungi-swarm = { path = "../swarm" }
fungi-util = { path = "../util" }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p = { workspace = true }
home = "0.5"
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
libp2p-stream = { workspace = true }
tokio-util = { version = "0.7", features = ["compat", "io"] }
anyhow = { workspace = true }
tarpc = { workspace = true }
fungi-fs = { path = "../fs", features = ["libunftp"] }
thiserror = { workspace = true }
async-trait = "0.1"
libunftp = "0.21"
dav-server = { version = "0.8", default-features = false }
hyper = { version = "1.1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20.0"
env_logger = "0.11"
# https://github.com/keepsimple1/mdns-sd/issues/363
mdns-sd = { git = "https://github.com/keepsimple1/mdns-sd", rev = "1b194de004e7290eff8c116f3e0cb88fadf2f03e" }
flume = "0.11.1"
typed-path = "0.11.0"

[dev-dependencies]
toml = "0.8"
