[package]
name = "fungi-daemon"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Expose TestDaemon and helpers for integration tests and external test crates.
test-support = []


[dependencies]
fungi-config = { workspace = true }
fungi-docker-agent = { workspace = true }
fungi-swarm = { workspace = true }
fungi-util = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true }
home = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
fungi-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "io"] }
anyhow = { workspace = true }
tarpc = { workspace = true }
fungi-fs = { workspace = true, features = ["libunftp"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
libunftp = { workspace = true }
dav-server = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
clap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tempfile = { workspace = true }
env_logger = { workspace = true }
mdns-sd = { workspace = true }
flume = { workspace = true }
typed-path = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
