[package]
name = "fungi-docker-agent"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1.1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
percent-encoding = "2.3"
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time",
] }

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
