[package]
name = "fungi-docker-agent"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
    "time",
] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
