[package]
name = "fungi-fs"
version.workspace = true
edition.workspace = true

[features]
default = []
libunftp = []

[dependencies]
unftp-sbe-fs = { workspace = true }
cap-std = { workspace = true }
libunftp = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
