[package]
name = "fungi-lab"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "fungi_lab"
path = "src/lib.rs"

[[bin]]
name = "fungi-lab"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
