[package]
name = "fungi-stream"
version.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
libp2p-core = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-swarm = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
libp2p-swarm-test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
