[package]
name = "fungi-swarm"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
fungi-util = { path = "../util" }
void = "1"
async-result = "0.1.0"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
