[package]
name = "fungi-swarm"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true }
fungi-stream = { workspace = true }
fungi-util = { workspace = true }
void = { workspace = true }
async-result = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
