[package]
name = "fungi-tests"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "test-service-remote-wasm-cli"
path = "src/bin/test_service_remote_wasm_cli.rs"

[[bin]]
name = "test-relay-config-cli"
path = "src/bin/test_relay_config_cli.rs"

[[bin]]
name = "test-relay-runtime-cli"
path = "src/bin/test_relay_runtime_cli.rs"

[[bin]]
name = "test-allowlist-relay-ping-cli"
path = "src/bin/test_allowlist_relay_ping_cli.rs"

[[bin]]
name = "test-service-apply-cli"
path = "src/bin/test_service_apply_cli.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
fungi-lab = { path = "../lab" }

[dev-dependencies]
