[package]
name = "fungi-util"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = { workspace = true }
futures = { workspace = true }
tokio = { version = "1", features = ["full"] }
libp2p-swarm = { workspace = true }
libp2p-identity = { workspace = true }
interprocess = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.35.2"
