[package]
name = "fungi-util"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p-swarm = { workspace = true }
libp2p-identity = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }
