[package]
name = "rust_lib_flutter_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
fungi-daemon = { path = "../../crates/daemon" }
fungi-config = { path = "../../crates/config" }
anyhow = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
