[package]
name = "fungi-server-simple-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungi-server-abstract = { path = "../fungi-server-abstract" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-rustls = "0.24.1"
rustls-pemfile = "1"