[package]
name = "fungi-server-simple-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fungi-server-abstract = { path = "../fungi-server-abstract" }
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
auth-service-proto = { path = "../../libs/auth-service-proto" }