[package]
name = "fungi-mobile-binding"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "fungi_mobile_binding"

[dependencies]
fungi ={ path = "../.." }
uniffi = { version = "0.27" }
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "0.27" , features = [ "build" ]}